--- a/erp-quimicos/src/main/webapp/vm/invordpresuben/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/invordpresuben/startup.vm
@@ -28,12 +28,12 @@
         
         <!--Esta tabla va  en la barra de acciones -->
         <table class="table_acciones" style="display:none" border="0">
-                <tr>
-                        <td width="15" height="30"></td>
-                        <td height="30"><a href="new_item" class="tooltip"><div class="onmouseOutNewItem" id="nItem"></div><span>Orden de Subensambles</span></a></td>
-                        <td width="15" height="30"></td>
-                        <td height="30"><a href="visualiza_buscador" class="tooltip"><div class="onmouseOutVisualizaBuscador" id="vbuscador"></div><span>Busqueda</span></a>  </td>
-                </tr>
+			<tr>
+				<td width="15" height="30"></td>
+				<td height="30"><a href="new_item" class="tooltip"><div class="onmouseOutNewItem" id="nItem"></div><span>Orden de Subensambles</span></a></td>
+				<td width="15" height="30"></td>
+				<td height="30"><a href="visualiza_buscador" class="tooltip"><div class="onmouseOutVisualizaBuscador" id="vbuscador"></div><span>Busqueda</span></a>  </td>
+			</tr>
         </table>
         
         <!--Esta tabla va  en la barra de buscador -->
@@ -57,9 +57,9 @@
 			
 			<tr>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td><INPUT TYPE="text" name="busqueda_folio" style="width:80px;"></td>
+				<td><input type="text" name="busqueda_folio" style="width:80px;"></td>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td><!--<INPUT TYPE="text" name="busqueda_descripcion" style="width:230px;">--></td>
+				<td><!--<input type="text" name="busqueda_descripcion" style="width:230px;">--></td>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 				<td>
 					<!--<SELECT NAME="busqueda_select_grupo" style="width:150px;">
@@ -67,9 +67,9 @@
 					</SELECT>-->
 				</td>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td><INPUT TYPE="button" value="Buscar"></td>
+				<td><input type="button" value="Buscar"></td>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td ><INPUT TYPE="button" value="Limpiar"></td>
+				<td ><input type="button" value="Limpiar"></td>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 			</tr>
 		</table>
@@ -130,7 +130,7 @@
 												<td width="5"></td>
 												<td width="50">Folio</td>
 												<td width="150">
-													<INPUT TYPE="text" name="folio" style="width:90px;" readOnly="true">
+													<input type="text" name="folio" style="width:90px;" readOnly="true">
 												</td>
 												<td width="5">&nbsp;</td>
 												<td width="85"></td>
@@ -181,15 +181,15 @@
 												<td width="50">Producto</td>
 												<td width="150">
 													<input type="hidden" name="producto_id">
-													<INPUT TYPE="text" name="productosku" style="width:90px;" readOnly="true">
-													<a href="busca_producto">(Buscar)</a>
+													<input type="text" name="productosku" style="width:90px;" readOnly="true">
+													<a href="agregar_producto">(Agregar)</a>
 												</td>
 												<td width="5">&nbsp;</td>
 												<td width="85">Descripci&oacute;n</td>
-												<td width="240" colspan="2"><INPUT TYPE="text" name="producto_descripcion" style="width:240px;" readOnly="true"></td>
-												<td width="60"><a href="agregar_producto">(Agregar)</a></td>
-												<td width="85"><INPUT TYPE="button" id="confirmar_orden" value="Confirmar" style="width:80px; font-weight: bold;"></td>
-												<td width="85" align="right"><INPUT TYPE="button" id="cancelar_orden" value="Cancelar" style="width:80px; font-weight: bold;"></td>
+												<td width="240" colspan="2"><input type="text" name="producto_descripcion" style="width:240px;" readOnly="true"></td>
+												<td width="60"><a href="busca_producto">(Buscar)</a></td>
+												<td width="85"><input type="button" id="confirmar_orden" value="Confirmar" style="width:80px; font-weight: bold;"></td>
+												<td width="85" align="right"><input type="button" id="cancelar_orden" value="Cancelar" style="width:80px; font-weight: bold;"></td>
 												<td width="5">&nbsp;</td>
 											</tr>
 											<tr>
@@ -197,27 +197,61 @@
 											</tr>
 											<tr>
 												<td width="5"></td>
-												<td colspan="9" align="left"  style="border: solid 1px #313E74;">
-													<div style="width:785px; height:100px; overflow:scroll; overflow-x: auto; overflow-y: auto;">
-														<table border="0">
-															<tr style="background-color:#A8A9AB; font-weight: bold;">
-																<td width="65" style="border: solid 1px #313E74;">&nbsp;#</td>
-																<td width="100" style="border: solid 1px #313E74;">&nbsp;C&oacute;digo</td>
-																<td width="420" style="border: solid 1px #313E74;">&nbsp;Nombre</td>
-																<td width="100" style="border: solid 1px #313E74;">Unidad</td>
-																<td width="100" style="border: solid 1px #313E74;">Cantidad</td>
-															</tr>
+												<td colspan="9" style="border-top:1px solid #C1DAD7; border-bottom:1px solid #C1DAD7; border-left:1px solid #FFFFFF; border-right:1px solid #FFFFFF;">
+													<table >
+														<thead>
 															<tr>
-																<td colspan="5">
-																	<div align="left" style="width:784px; height:70px; overflow:scroll; overflow-x: auto; overflow-y: auto;">
-																		<table border="0" id="grid_productos" >
-																			<!--<tr>
-																				
-																			</tr>-->																
-																		</table>
-																	</div>
-																</td>		
+																<td class="grid" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="65">#</td>
+																<td class="grid" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="100">&nbsp;C&oacute;digo</td>
+																<td class="grid" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="285">&nbsp;Nombre del Producto</td>
+																<td class="grid" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="100">&nbsp;Unidad</td>
+																<td class="grid" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="120">&nbsp;Presentaci&oacute;n</td>
+																<td class="grid" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="100">&nbsp;Cantidad</td>
 															</tr>
+														</thead>
+													</table>
+													<div style="overflow:scroll; overflow-x: hidden; overflow-y: auto;  width:785; height: 70px; border:1px solid #C1DAD7 !important;">	
+														<table>
+															<tbody id="grid_productos" style="background-color: #FFFFFF;" valign="top">
+																
+																<!--
+																<tr>
+																	<td class="grid" style="font-size:14px; font-weight:bold; border:1px solid #C1DAD7;" width="30">
+																		<a href="#" class="add">&nbsp;&nbsp;+&nbsp;&nbsp;</a>
+																	</td>
+																	<td class="grid" style="font-size:15px; font-weight:bold; border:1px solid #C1DAD7;" width="30">
+																		<a href="#" class="delete">&nbsp;&nbsp;-&nbsp;&nbsp;</a>
+																	</td>
+																	
+																	<td class="grid1" style="font-size: 11px;  border:1px solid #C1DAD7;" width="180">
+																		<select name="select_aml_envase" style="width:176px;">
+																			<option value="0" selected="yes">[--Seleccionar Almacen--]</option>
+																		</select>
+																	</td>
+																	
+																	<td class="grid1" style="font-size: 11px;  border:1px solid #C1DAD7;" width="180">
+																		<select name="select_aml_dest" style="width:176px;">
+																			<option value="0" selected="yes">[--Seleccionar Almacen--]</option>
+																		</select>
+																	</td>
+																	<td class="grid1" style="font-size: 11px;  border:1px solid #C1DAD7;" width="130">
+																		<select name="select_pres_dest" style="width:126px;">
+																			<option value="0" selected="yes">[--Presentacion--]</option>
+																		</select>
+																	</td>
+																	<td class="grid1" style="font-size: 11px;  border:1px solid #C1DAD7;" width="85">
+																		<input type="text" 	name="cantpres" id="cantpres" value="" style="width:80px;" maxlength="10">
+																	</td>
+																	<td class="grid1" style="font-size: 11px;  border:1px solid #C1DAD7;" width="90">
+																		<input type="text" 	name="uni" value="" id="uni" class="borde_oculto" readOnly="true" style="width:86px;">
+																	</td>
+																	<td class="grid1" style="font-size: 11px;  border:1px solid #C1DAD7;" width="95">
+																		<input type="text" 	name="cantuni" id="cantuni" value="" class="borde_oculto" readOnly="true" style="width:90px; text-align:right;">
+																	</td>																	
+																</tr>
+																-->
+																
+															</tbody>
 														</table>
 													</div>
 												</td>
@@ -235,27 +269,24 @@
 											</tr>
 											<tr>
 												<td width="5"></td>
-												<td colspan="9" align="left"  style="border: solid 1px #313E74;">
-													<div style="width:785px; height:125px; overflow:scroll; overflow-x: auto; overflow-y: auto;">
-														<table border="0">
-															<tr style="background-color:#A8A9AB; font-weight: bold;">
-																<td width="65" style="border: solid 1px #313E74;">&nbsp;#</td>
-																<td width="75" style="border: solid 1px #313E74;">&nbsp;C&oacute;digo</td>
-																<td width="172" style="border: solid 1px #313E74;">&nbsp;Nombre</td>
-																<td width="70" style="border: solid 1px #313E74;">Unidad</td>
-																<td width="67" style="border: solid 1px #313E74;">Cantidad</td>
-															</tr>
+												<td colspan="9" style="border-top:1px solid #C1DAD7; border-bottom:1px solid #C1DAD7; border-left:1px solid #FFFFFF; border-right:1px solid #FFFFFF;">
+													<table >
+														<thead>
 															<tr>
-																<td colspan="5">
-																	<div align="left" style="width:784px; height:95px; overflow:scroll; overflow-x: auto; overflow-y: auto;">
-																		<table border="0" id="grid_productos_complementos" >
-																			<!--<tr>
-																				
-																			</tr>-->																
-																		</table>
-																	</div>
-																</td>					
+																<td class="grid" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="65">#</td>
+																<td class="grid" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="100">&nbsp;C&oacute;digo</td>
+																<td class="grid" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="285">&nbsp;Nombre del Producto</td>
+																<td class="grid" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="100">&nbsp;Unidad</td>
+																<td class="grid" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="120">&nbsp;Presentaci&oacute;n</td>
+																<td class="grid" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="100">&nbsp;Cantidad</td>
 															</tr>
+														</thead>
+													</table>
+													<div style="overflow:scroll; overflow-x: hidden; overflow-y: auto;  width:785; height: 90px; border:1px solid #C1DAD7 !important;">	
+														<table>
+															<tbody id="grid_productos_complementos" style="background-color: #FFFFFF;" valign="top">
+												
+															</tbody>
 														</table>
 													</div>
 												</td>
@@ -359,7 +390,7 @@
                                         </tr>
                                         <tr>
                                             <td width="70">C&oacute;digo&nbsp;</td>
-                                            <td width="120"><INPUT TYPE="text" name="campo_sku" style="width:120px;"></td>
+                                            <td width="120"><input type="text" name="campo_sku" style="width:120px;"></td>
                                             <td width="25"></td>
                                             <td width="90"><!--Tipo&nbsp;de&nbsp;Producto--></td>
                                             <td width="200">
@@ -373,10 +404,10 @@
                                         </tr>
                                         <tr>
                                             <td width="70">Descripci&oacute;n</td>
-                                            <td width="400" colspan="4"><INPUT TYPE="text" name="campo_descripcion" style="width:415px;"></td>
+                                            <td width="400" colspan="4"><input type="text" name="campo_descripcion" style="width:415px;"></td>
                                             <td width="25"></td>
                                             <td width="90" align="right">
-                                                <INPUT TYPE="button" id="busca_producto_modalbox" class="onmouseOutBuscar">
+                                                <input type="button" id="busca_producto_modalbox" class="onmouseOutBuscar">
                                             </td>
                                         </tr>
                                        
@@ -433,7 +464,7 @@
                                 <td width="280" style="background:#ffffff"></td>
                                 <td width="90" style="background:#ffffff"></td>
                                 <td width="110" style="background:#ffffff" align="right">
-                                    <INPUT TYPE="button" id="cencela" class="onmouseOutCancelar">
+                                    <input type="button" id="cencela" class="onmouseOutCancelar">
                                 </td>
                                 <td width="10" style="background:#ffffff"></td>
                                 <td width="10"></td>
