--- a/erp-quimicos/src/main/webapp/vm/invordpresuben/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/invordpresuben/startup.vm
@@ -43,11 +43,11 @@
 			</tr>
 			<tr>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td>Folio</td>
+				<td width="80">Folio</td>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td>&nbsp;&nbsp;</td>
+				<td width="100">C&oacute;digo Producto</td>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td>&nbsp;</td>
+				<td width="200">Nombre Producto</td>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 				<td></td>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
@@ -57,15 +57,11 @@
 			
 			<tr>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td><input type="text" name="busqueda_folio" style="width:80px;"></td>
+				<td width="80"><input type="text" name="busqueda_folio" style="width:80px;"></td>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td><!--<input type="text" name="busqueda_descripcion" style="width:230px;">--></td>
+				<td width="100"><input type="text" name="busqueda_codigo" style="width:100px;"></td>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td>
-					<!--<SELECT NAME="busqueda_select_grupo" style="width:150px;">
-						<option value="0">[--Seleccionar grupo --]</option>
-					</SELECT>-->
-				</td>
+				<td width="200"><input type="text" name="busqueda_producto" style="width:200px;"></td>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 				<td><input type="button" value="Buscar"></td>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
